<resources>
    <string name="app_name">SplashScreenFarmersApp</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="privacy_policy">Privacy policy</string>


    <string name="i_accept">I Accept</string>


    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recive_otp">Recive OTP</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="wellcome_login">welcome to unique platform created to empower farmers in india</string>

    <string name="username">Username</string>

    <string name="forget_password">Forget Password ?</string>
    <string name="create_account">Create a new account</string>
    <string name="signup">Signup</string>
    <string name="please_wait">Please Wait...</string>
    <string name="loading">Loading</string>


</resources>